--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,281 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@function halfHsl($color1, $color2) {
+  $half_hue: (hue($color1) + hue($color2)) / 2;
+  $half_sat: (saturation($color1) + saturation($color2)) / 2;
+  $half_lit: (lightness($color1) + lightness($color2)) / 2;
+  @return hsl($half_hue, $half_sat, $half_lit);
+}
+
+
+@mixin overlayGradient($angle, $t1, $t2) {
+  $color1: color($colors, primary);
+  $color2: color($colors, secondary);
+  $color3: halfHsl($color1, $color2);
+
+  background: $color1;
+  background: -webkit-linear-gradient($angle, transparentize($color3, $t1), transparentize($color1, $t2));
+  background: -o-linear-gradient($angle, transparentize($color3, $t1), transparentize($color1, $t2));
+  background: -moz-linear-gradient($angle, transparentize($color3, $t1), transparentize($color1, $t2));
+  background: linear-gradient($angle, transparentize($color3, $t1), transparentize($color1, $t2));
+}
+
+@mixin custom-card($background) {
+  width: 100%;
+  background: $background;
+  border-radius: 2px;
+  box-shadow: 0px 0px 2px rgba(0,0,0,0.23), 2px 2px 2px rgba(0,0,0,0.23);
+  overflow: hidden;
+  z-index: 1;
+}
+
+//app title
+.app-clear-title {
+  color: white;
+  font-size: 2.2rem;
+  font-weight: 100;
+  text-transform: uppercase;
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.app-content-header {
+  height: 25%;
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center;
+  justify-content: center;
+}
+//App Forms
+.app-form {
+  flex: 1;
+
+  ion-list {
+    background: white;
+    &.list-ios {
+      border-radius: 2px;
+    }
+
+    &:first-of-type {
+      border-top-right-radius: 2px;
+      border-top-left-radius: 2px;
+      ion-list-header {
+        border-top-right-radius: 2px;
+        border-top-left-radius: 2px;
+      }
+    }
+
+    &:last-of-type {
+      border-bottom-right-radius: 2px;
+      border-bottom-left-radius: 2px;
+    }
+
+    ion-list-header {
+      margin-bottom: 0px;
+      font-weight: 500;
+      color: color($colors, dark);
+    }
+
+    ion-item-divider {
+      ion-label {
+        text-align: left;
+        &.label-md {
+          text-transform: uppercase;
+        }
+      }
+    }
+
+    ion-item {
+      background: transparent;
+      border: none !important;
+      box-shadow: none !important;
+
+      .item-inner {
+        box-shadow: none !important;
+        border: none !important;
+      }
+
+      //Invalid Item
+      &.invalid {
+        ion-label, ion-input {
+          color: color($colors, danger) !important;
+        }
+      }
+
+      //focused item
+      &.item-input-has-focus, &.input-has-focus {
+        ion-label.label-md, ion-label.label-ios, ion-label.label-wp {
+          color: color($colors, primary);
+        }
+
+      }
+
+      ion-input {
+        transition: color 0.3s ease-in-out;
+        font-weight: 300;
+        input.text-input-wp {
+          border: none;
+        }
+      }
+      
+
+      ion-label.label-md, ion-label.label-ios, ion-label.label-wp {
+        transition: color 0.3s ease-in-out;
+        color: color($colors, dark);
+      }
+
+      //error text
+      &.error-text ion-label p {
+        font-size: 1rem;
+        font-weight: 300;
+        color: color($colors, danger) !important;
+        overflow: hidden;
+      }
+
+    }
+  }
+}
+
+//remove card item background
+ion-card[color] {
+  ion-item {
+    background: transparent;
+    //light card item
+    &[light] {
+      color: color($colors, light);
+    }
+  }
+}
+
+.preloader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  display: -webkit-flex;
+  .loading {
+    margin: auto;
+    img {
+      width: 80px;
+      height: 80px;
+    }
+  }
+}
+
+
+//profile
+.profile-card {
+  @include custom-card(rgb(255,255,255));
+
+  .profile-bio {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    align-items: center;
+    -webkit-align-items: center;
+    padding: 16px;
+
+    .profile-image {
+      display: block;
+      width: 125px;
+      height: 125px;
+      position: relative;
+      padding: 0;
+      .profile-image-wrapper {
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        box-sizing: border-box;
+        border: 5px solid color($colors, light);
+        padding: 0;
+        overflow: hidden;
+        z-index: 1;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .btn-float-right, .btn-float-left {
+        position: absolute;
+        top: calc(50% - 20px);
+        margin: 0px;
+        box-shadow: none;
+        //border: 2px solid rgba(0,0,0,0.1);
+      }
+      .btn-float-right {
+        right: -20px;
+      }
+
+      .btn-float-left {
+        left: -20px;
+      }
+    }
+
+    .profile-identity {
+      padding: 16px;
+      h3,h4 {
+        text-align: center;
+        margin: 0 0 8px 0;
+      }
+      h3 {
+        font-size: 2rem;
+        font-weight: 500;
+        color: color($colors, dark);
+      }
+      h4 {
+        font-size: 1.6rem;
+        font-weight: 100;
+        color: transparentize(color($colors, dark), 0.4);
+      }
+    }
+  }
+
+  .profile-status {
+    width: 100%;
+    display: flex;
+    display: -webkit-flex;
+    border-top: 1px solid color($colors, borderColor);
+    padding: 0;
+
+    .profile-status-item {
+      display: flex;
+      display: -webkit-flex;
+      flex-direction: column;
+      -webkit-flex-direction: column;
+      align-items: center;
+      -webkit-align-items: center;
+      flex: 1;
+      -webkit-flex: 1;
+      border-left: 1px solid color($colors, borderColor);
+      padding: 16px;
+      &:first-child {
+        border-left: none;
+      }
+      .profile-status-item-value {
+        font-size: 2.5rem;
+        font-weight: 400;
+        padding: 8px;
+      }
+      .profile-status-item-text {
+        font-size: 1rem;
+        text-transform: uppercase;
+        color: transparentize(color($colors, dark), 0.3);
+        font-weight: 500;
+      }
+    }//profile-status-item
+  }//profile-status
+}
+
+  ion-header {
+    ion-title {
+      .toolbar-title-md {
+        font-weight: 300;
+      }
+    }
+  }
