--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,17 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:      #3F51B5,
+  secondary:    #009688,
+  danger:       #F44336,
+  success:      #4CAF50,
+  info:         #2196F3,
+  warning:      #FF9800,
+  neutral:      #aaaaaa,
+  light:        #f4f4f4,
+  dark:         #2e2e2e,
+  primaryLight: #C5CAE9,
+  borderColor:  #CCCCCC,
 );
 
 
