--- a/src/components/event-card/event-card.scss
+++ b/src/components/event-card/event-card.scss
@@ -58,7 +58,7 @@
     .event-poster-image {
       display: flex;
       overflow: hidden;
-      img {
+      ion-img {
         width: 100%;
         height: 100%;
       }
@@ -129,9 +129,15 @@
     -webkit-align-items: center;
     width: 100%;
     padding: 4px 12px;
+    padding-left: 4px;
     .event-interests {
       font-size: 1.3rem;
       font-weight: 300;
+      color: color($colors, dark);
+      display: flex;
+      display: -webkit-flex;
+      align-items: center;
+      -webkit-align-items: center;
     }
     .event-actions {
       margin-left: auto;
